# computer-graphics-game2

./: CG-Game.cbp  CG-Game.depend  CG-Game.layout  README.md
scripts/: CMakeLists.txt  build.sh  run.sh
src/: coin.c  coin.h  estado.c  estado.h  hud.c  hud.h  main.c  menu.c  menu.h  model.c  model.h  obstacle.c  obstacle.h  player.c  player.h  tree.c  tree.h
